# ask.sh

./: .gitignore  Cargo.toml  README.md  user_system_info.rs
src/: chat_handler.rs  command_analyser.rs  main.rs  prompts.rs  system_prompt.md  tmux_command_executor.rs  user_system_info.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/tools/: execute_command.rs  mod.rs  searxng_web_search.rs
