[package]
name = "ask-sh-myogui"
edition = "2021"
version = "1.0.0"
authors = ["myogui <myogui@6368578.xyz>"]
description = "An AI command line assistant, which is context-aware and multi-turn capable."
license = "MIT"
repository = "https://github.com/myoqgui/ask.sh/"

[dependencies]
"dotenv"="0.15.0"
"regex"="1.8.3"
"tokio" = { version = "1.12.0", features = ["full"] }
"futures" = "0.3.19"
tinytemplate = "1.2.1"
async-openai = "0.18.3"
once_cell = "1.19.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
pin-project = "1.0"
dotenvy = "0.15.7"
uuid = { version = "1.18.1", features = ["v4"] }
async-recursion = "1.1.1"
indicatif = "0.18.2"
cli-boxes = "0.1.1"
console = "0.16.1"
unicode-width = "0.2.2"
termimad = "0.34.0"
inquire = "0.9.1"

[[bin]]
name = "ask-sh"
path = "./src/main.rs"
